--- a/core/services/pom.xml
+++ b/core/services/pom.xml
@@ -17,5 +17,10 @@
       <artifactId>dao</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.4.1</version>
+    </dependency>
   </dependencies>
 </project>
