--- a/app/pom.xml
+++ b/app/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>services</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.4.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
