--- a/app/pom.xml
+++ b/app/pom.xml
@@ -35,34 +35,58 @@
   </dependencies>
   <build>
     <plugins>
-       <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-jar-plugin</artifactId>
-         <version>2.4</version>
-         <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.dandy.Program5</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-       </plugin>
-       <plugin> 
-         <artifactId>maven-dependency-plugin</artifactId> 
-           <executions> 
-             <execution> 
-               <phase>package</phase> 
-                 <goals> 
-                   <goal>copy-dependencies</goal> 
-                 </goals> 
-                 <configuration> 
-                   <outputDirectory>${project.build.directory}/lib</outputDirectory> 
-                 </configuration> 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.5.5</version>
+          <configuration>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>com.dandy.Program5</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+          <executions>
+            <execution>
+              <id>assemble-all</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.4</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>com.dandy.Program5</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+        </plugin>
+        <plugin> 
+          <artifactId>maven-dependency-plugin</artifactId> 
+            <executions> 
+              <execution> 
+                <phase>package</phase> 
+                <goals> 
+                  <goal>copy-dependencies</goal> 
+                </goals> 
+                <configuration> 
+                  <outputDirectory>${project.build.directory}/lib</outputDirectory> 
+                </configuration> 
               </execution> 
             </executions> 
-       </plugin>
-     </plugins>
-   </build>
-</project>
+          </plugin>
+        </plugins>
+      </build>
+    </project>
