--- a/infra/persistence/pom.xml
+++ b/infra/persistence/pom.xml
@@ -22,5 +22,10 @@
       <artifactId>hibernate-core</artifactId>
       <version>4.3.10.Final</version>
     </dependency>
+    <dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-ehcache</artifactId>
+	<version>4.3.10.Final</version>
+    </dependency>
   </dependencies>
 </project>
