--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,31 @@
     <module>core</module>
     <module>infra</module>
   </modules>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
+    <profiles>
+        <profile>
+            <id>development</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>environment.type</name>
+                    <value>dev</value>
+                </property>
+            </activation>
+            <properties>
+                <db.dialect>org.hibernate.dialect.PostgreSQLDialect</db.dialect>
+                <db.driverClass>org.postgresql.Driver</db.driverClass>
+                <db.connectionURL>jdbc:postgresql://localhost:5432/people</db.connectionURL>
+                <db.username>dandy</db.username>
+                <db.password>dandydan</db.password>
+            </properties>
+        </profile>
+     </profiles>
 </project>
