--- a/infra/persistence/pom.xml
+++ b/infra/persistence/pom.xml
@@ -9,23 +9,21 @@
   </parent>
   <groupId>com.dandy.infra</groupId>
   <artifactId>persistence</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <name>persistence</name>
   <dependencies>
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
+      <version>${postgreVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>4.3.10.Final</version>
     </dependency>
     <dependency>
 	<groupId>org.hibernate</groupId>
 	<artifactId>hibernate-ehcache</artifactId>
-	<version>4.3.10.Final</version>
+	<version>${hibernateVersion}</version>
     </dependency>
   </dependencies>
 </project>
