--- a/app/pom.xml
+++ b/app/pom.xml
@@ -9,91 +9,34 @@
   </parent>
   <groupId>com.dandy</groupId>
   <artifactId>app</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <name>app</name>
   <dependencies>
     <dependency>
       <groupId>com.dandy.infra</groupId>
       <artifactId>persistence</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${projectVersion}</version>
     </dependency>
     <dependency>
       <groupId>com.dandy.core</groupId>
       <artifactId>model</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${projectVersion}</version>
     </dependency>
     <dependency>
       <groupId>com.dandy.core</groupId>
       <artifactId>services</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${projectVersion}</version>
     </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
       <artifactId>commons-validator</artifactId>
-      <version>1.4.1</version>
     </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.5</version>
-          <configuration>
-            <descriptorRefs>
-              <descriptorRef>jar-with-dependencies</descriptorRef>
-            </descriptorRefs>
-            <archive>
-              <manifest>
-                <addClasspath>true</addClasspath>
-                <mainClass>com.dandy.Program5</mainClass>
-              </manifest>
-            </archive>
-          </configuration>
-          <executions>
-            <execution>
-              <id>assemble-all</id>
-              <phase>package</phase>
-              <goals>
-                <goal>single</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.4</version>
-          <configuration>
-            <archive>
-              <manifest>
-                <addClasspath>true</addClasspath>
-                <mainClass>com.dandy.Program5</mainClass>
-              </manifest>
-            </archive>
-          </configuration>
-        </plugin>
-        <plugin> 
-          <artifactId>maven-dependency-plugin</artifactId> 
-            <executions> 
-              <execution> 
-                <phase>package</phase> 
-                <goals> 
-                  <goal>copy-dependencies</goal> 
-                </goals> 
-                <configuration> 
-                  <outputDirectory>${project.build.directory}/lib</outputDirectory> 
-                </configuration> 
-              </execution> 
-            </executions> 
-          </plugin>
-        </plugins>
-      <resources>
-       <resource>
-        <directory>src/main/resources</directory>
-        <filtering>true</filtering>
-       </resource>
-      </resources>
-      </build>
-
-    </project>
+        <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+</project>
