--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,50 @@
     <module>core</module>
     <module>infra</module>
   </modules>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>commons-validator</groupId>
+        <artifactId>commons-validator</artifactId>
+        <version>${commonsValidatorVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${hibernateVersion}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.5.5</version>
+          <configuration>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>com.dandy.Program5</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+          <executions>
+            <execution>
+              <id>assemble-all</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -19,23 +62,28 @@
       </resource>
     </resources>
   </build>
-    <profiles>
-        <profile>
-            <id>development</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-                <property>
-                    <name>environment.type</name>
-                    <value>dev</value>
-                </property>
-            </activation>
-            <properties>
-                <db.dialect>org.hibernate.dialect.PostgreSQLDialect</db.dialect>
-                <db.driverClass>org.postgresql.Driver</db.driverClass>
-                <db.connectionURL>jdbc:postgresql://localhost:5432/people</db.connectionURL>
-                <db.username>dandy</db.username>
-                <db.password>dandydan</db.password>
-            </properties>
-        </profile>
-     </profiles>
+  <properties>
+    <commonsValidatorVersion>1.4.1</commonsValidatorVersion>
+    <projectVersion>1.0-SNAPSHOT</projectVersion>
+    <postgreVersion>9.1-901-1.jdbc4</postgreVersion>
+    <hibernateVersion>4.3.10.Final</hibernateVersion>
+  </properties>
+  <profiles>
+    <profile>
+      <id>development</id>
+      <activation>
+        <property>
+          <name>environment.type</name>
+          <value>dev</value>
+        </property>
+      </activation>
+      <properties>
+        <db.dialect>org.hibernate.dialect.PostgreSQLDialect</db.dialect>
+        <db.driverClass>org.postgresql.Driver</db.driverClass>
+        <db.connectionURL>jdbc:postgresql://localhost:5432/people</db.connectionURL>
+        <db.username>dandy</db.username>
+        <db.password>dandydan</db.password>
+      </properties>
+    </profile>
+  </profiles>
 </project>
